fix: z-index whatsapp button

--- a/src/shared/components/whatsApp/WhatsApp.scss
+++ b/src/shared/components/whatsApp/WhatsApp.scss
@@ -2,6 +2,7 @@
     background-color: #25d366;
     border-radius: 50%;
     position: fixed;
+    z-index: 10;;
     display: flex;
     justify-content: center;
     align-items: center;
